clientFolder/force-app/main/default/objects/Position__c/fields/Dealership__c.field-meta.xml
<CustomField>
    <fullName>Dealership__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Dealership</label>
    <referenceTo>Dealership__c</referenceTo>
    <relationshipLabel>Positions</relationshipLabel>
    <relationshipName>Positions</relationshipName>
    <type>Lookup</type>
</CustomField>