clientFolder/force-app/main/default/objects/Position__c/fields/Requires_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>Requires_Salesforce__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Salesforce?</label>
    <type>Checkbox</type>
</CustomField>